@@ -1,30 +1,67 @@
 <strings>
-    <string id="30001">Activeer XBMC File Cleaner</string>
-    <string id="30003">Bibliotheek opschonen na verwijderen</string>
-    <string id="30004">Toon notificaties</string>
-    <string id="30005">Verwijder bestanden pas na een aantal dagen na bekijken</string>
-    <string id="30006">Verwijder bestanden pas bij te weinig vrije schrijfruimte</string>
-    <string id="30007">Minimaal percentage vrije schijfruimte</string>
-    <string id="30008">Service</string>
-    <string id="30009">Bibliotheek opschonen</string>
-    <string id="30010">Aantal dagen waarna een bestand als verlopen wordt beschouwd</string>
-    <string id="30011">Locatie om te controleren op vrije schijfruimte</string>
+    <!-- Options Sections -->
+    <string id="31000">Algemeen</string>
+    <string id="32000">Voorwaarden</string>
+    <string id="33000">Leeg</string>    
+    
+    <!-- Individual Options -->
+    <string id="31001">[B]Algemene opties voor XBMC File Cleaner[/B]</string>
+    <string id="31002">Activeer verwijderen van bestanden</string>
+    
+    <string id="31003">Wachttijd bij opstarten (in minuten)</string>
+    <string id="31004">Scan-interval (in minuten)</string>
+    
+    <string id="31005">Toon notificaties</string>
+    <string id="31006">Toon debuginformatie</string>
+    
+    <string id="31007">Bibliotheek opschonen na verwijderen</string>
+    <string id="31008">Verwijder films</string>
+    <string id="31009">Verwijder TV series</string>
+    
+    
+    
+    
+    
+    <string id="32001">[B]In dit menu is het mogelijk om voorwaarden te stellen aan de bestanden die verwijderd moeten worden[/B]</string>
+    <string id="32002">Verwijder bestanden pas na een aantal dagen na bekijken</string>
+    <string id="32003">Aantal dagen waarna een bestand als verlopen wordt beschouwd</string>
+    
+    <string id="32004">Verwijder bestanden alleen bij een lage score</string>
+    <string id="32005">Verwijder bestand bij een score lager dan</string>
+    <string id="32006">Negeer bestanden zonder score</string>
+    
+    <string id="32007">Verwijder bestanden pas bij te weinig vrije schrijfruimte</string>
+    <string id="32008">Minimaal percentage vrije schijfruimte</string>
+    <string id="32009">Locatie om te controleren op vrije schijfruimte</string>
+    
+    <string id="32010">Gebruik tijdelijke bewaarmap</string>
+    <string id="32011">Locatie bewaarmap</string>
+    <string id="32012">Maak serie- en seizoensmappen aan</string>
+    <string id="32013">Werk bestandslocatie bij na verplaatsen</string>
+    <string id="32014">Aantal dagen dat bestanden worden bewaard</string>
+    
+    
+    
+    
+    
+    <string id="33001">[B]Dit menu is leeg, dus wellicht overbodig[/B]</string>
+    
+    
+    
+    
+    
+    
+    
+    
+    <!-- Notifications and debug logging -->
     <string id="30012">Fout bij lezen van de videobibliotheek</string>
+    <string id="30025">%s verplaatst naar bewaarmap</string>
+    <string id="30009">Bibliotheek opschonen</string>
     <string id="30013">Reiniger opgestart</string>
     <string id="30014">%s verwijderd uit %s</string>
-    <string id="30015">Service stopgezet</string>
-    <string id="30016">Verwijder films</string>
-    <string id="30017">Verwijder TV series</string>
-    <string id="30018">Verwijder bestanden alleen bij een lage score</string>
-    <string id="30019">Verwijder bestand bij een score lager dan</string>
-    <string id="30020">Negeer bestanden zonder score</string>
-    <string id="30021">Gebruik tijdelijke bewaarmap</string>
-    <string id="30022">Locatie bewaarmap</string>
-    <string id="30023">Aantal dagen dat bestanden worden bewaard</string>
-    <string id="30024">Toon debuginformatie</string>
-    <string id="30025">%s verplaatst naar bewaarmap</string>
-    <string id="30026">Maak serie- en seizoensmappen aan</string>
-    <string id="30027">Werk bestandslocatie bij na verplaatsen</string>
-    <string id="30028">Scan-interval (in minuten)</string>
-    <string id="30029">Wachttijd bij opstarten (in minuten)</string>
+    <string id="30015">Service inactief</string>
+    
+    <!-- Unknown and possibly obsolete labels -->
+    <string id="30008">Service</string>
+    
 </strings>
