@@ -2,13 +2,14 @@ Version 2.0.0
 ===============
 - Eden compatibility
 - Addon now runs as a service
+- Totally revamped the settings page
 - Added several new options to configure, such as delayed start and scan interval
 - Fixed a bug in settings that disallowed users to disable expiration checks
-- Updated text strings
 - Enhanced queries used to select files to be deleted
 - Enable cleaning multiple databases at once, instead of just the hardcoded MyVideos34.db
-- Dutch language support
+- Updated text strings
 - More more descriptive notifications and logging
+- Dutch language support
 
 Version 1.3.5
 ===============
